--- a/index.html
+++ b/index.html
@@ -6,12 +6,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>DuHan - Korean Learning</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          fontFamily: {
+            serif: ['"Noto Serif KR"', 'serif'],
+            sans: ['"Inter"', '"Noto Sans KR"', 'sans-serif'],
+          }
+        }
+      }
+    }
+  </script>
   <link
-    href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&family=Inter:wght@400;500;600;700&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@400;500;600;700;900&family=Noto+Sans+KR:wght@300;400;500;700&family=Inter:wght@400;500;600;700&display=swap"
     rel="stylesheet">
   <style>
     body {
-      font-family: 'Inter', 'Noto Sans KR', sans-serif;
+      font-family: 'Noto Serif KR', 'Inter', 'Noto Sans KR', serif;
     }
 
     .highlight-yellow {
